# Skarn

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  install.sh  skarn.example.toml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/skarn/: Cargo.toml
crates/skarn-codemode/: Cargo.toml
crates/skarn-codemode/src/: bridge.rs  dts.rs  engine.rs  lib.rs  validate.rs
crates/skarn-codemode/tests/: run.rs
crates/skarn-common/: Cargo.toml
crates/skarn-common/src/: command.rs  error.rs  lib.rs  tokens.rs
crates/skarn-compress/: Cargo.toml
crates/skarn-compress/assets/: default_rules.yaml
crates/skarn-compress/src/: engine.rs  lib.rs  rules.rs
crates/skarn-compress/tests/: compress_golden.rs
crates/skarn-gateway/: Cargo.toml
crates/skarn-gateway/src/: config.rs  downstream.rs  execute.rs  lib.rs  registry.rs  server.rs  worker_proto.rs
crates/skarn-sandbox/: Cargo.toml
docs/: demo.tape
docs/adr/: 0001-quickjs-over-deno-core.md  0002-spawn-based-sandbox-model.md  0003-code-mode-thread-isolation.md  0004-tool-namespacing-and-manifest.md  0005-mcp-sdk-and-protocol-version.md  0006-http-downstream-transport.md  0007-cross-process-sandboxed-worker.md  README.md
docs/integrations/: claude-code.md  cursor-windsurf.md
examples/echo-mcp-server/: Cargo.toml
examples/scripts/: echo-demo.js  triage-stale-issues.ts
website/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
website/scripts/: copy-install.mjs
website/src/: App.tsx  app.css  index.css  main.tsx
(+49 files in other folders)
